[package]
name = "action_maps"
version = "0.3.0"
edition = "2021"
description = "A dynamic action mapping system for Bevy."
license = "MIT"
repository = "https://github.com/shakesbeare/action_maps"
keywords = [ "bevy", "action", "mapping", "input" ]
categories = [ "game-dev", "game-engine", "game-engine-plugin" ]
exclude = ["assets/", "examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.12.0"
bevy_ecs = "0.12.0"
bevy_input = "0.12.0"

[dev-dependencies]
bevy = "0.12.0"
