[package]
name = "action_maps"
version = "0.3.1"
edition = "2021"
description = "A dynamic action mapping system for Bevy."
license = "MIT"
repository = "https://github.com/shakesbeare/action_maps"
keywords = [ "bevy", "action", "mapping", "input" ]
categories = [ "game-dev", "game-engine", "game-engine-plugin" ]
exclude = ["assets/", "examples/", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
thiserror = "1.0.51"
